[gd_scene format=3 uid="uid://c4meqewcdr3ey"]

[ext_resource type="Script" path="res://scripts/ui/voyage_recap.gd" id="1_recap"]
[ext_resource type="FontFile" uid="uid://xqiy7ijtjsrv" path="res://assets/fonts/VT323-Regular.ttf" id="2_font"]

[node name="VoyageRecap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_recap")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.01, 0.02, 0.05, 0.95)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -320.0
offset_right = 350.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.4, 0.9, 1.0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "[ VOYAGE COMPLETE ]"
horizontal_alignment = 1

[node name="EndingLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(1.0, 0.85, 0.2, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "THE GOLDEN AGE"
horizontal_alignment = 1

[node name="EndingDescLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.6, 0.8, 0.7, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 14
text = "All 1,000 colonists reached New Earth. Humanity will flourish."
horizontal_alignment = 1
autowrap_mode = 2

[node name="TopBorder" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1.0, 0.4)

[node name="FinalStateHeader" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.3, 0.6, 0.7, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 14
text = "FINAL STATE"

[node name="FinalStateContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 4

[node name="ColonistsLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/FinalStateContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.5, 0.9, 0.7, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "COLONISTS REMAINING: 1000 / 1000"

[node name="FuelLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/FinalStateContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1.0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "FUEL RESERVES: 0"

[node name="IntegrityLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/FinalStateContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.5, 0.8, 0.9, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "SHIP INTEGRITY: 100%"

[node name="ScrapLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/FinalStateContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(1.0, 0.7, 0.3, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "SCRAP STOCKPILE: 0"

[node name="CrewHeader" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.3, 0.6, 0.7, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 14
text = "CREW STATUS"

[node name="OfficersContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 2

[node name="MidBorder" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1.0, 0.3)

[node name="CumulativeHeader" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.3, 0.6, 0.7, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 14
text = "VOYAGE STATISTICS"

[node name="CumulativeContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 4

[node name="TotalFuelLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/CumulativeContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1.0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "TOTAL FUEL COLLECTED: 0"

[node name="TotalScrapLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/CumulativeContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(1.0, 0.7, 0.3, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "TOTAL SCRAP COLLECTED: 0"

[node name="TotalEnemiesLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/CumulativeContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(1.0, 0.4, 0.3, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "TOTAL HOSTILES ELIMINATED: 0"

[node name="TotalMissionsLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/CumulativeContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.5, 0.9, 0.7, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "MISSIONS COMPLETED: 0"

[node name="TotalTurnsLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/CumulativeContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.5, 0.8, 0.9, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "TACTICAL TURNS SURVIVED: 0"

[node name="NodesVisitedLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/CumulativeContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.6, 0.7, 0.8, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "SECTORS TRAVERSED: 0"

[node name="BottomBorder" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1.0, 0.3)

[node name="ButtonContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="MainMenuButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 45)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.4, 0.9, 1.0, 1)
theme_override_colors/font_hover_color = Color(0.7, 1.0, 1.0, 1)
theme_override_colors/font_pressed_color = Color(0.2, 0.6, 0.8, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "[ MAIN MENU ]"

[node name="RestartButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 45)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.4, 0.9, 1.0, 1)
theme_override_colors/font_hover_color = Color(0.7, 1.0, 1.0, 1)
theme_override_colors/font_pressed_color = Color(0.2, 0.6, 0.8, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "[ RESTART ]"
